# cs480Jordy

./: README.md
PA1/shaders/: shader.vrt
PA1/src/: main.cpp  object.cpp  shader.cpp
PA10/: CMakeLists.txt  README.md
PA10/CMakeModules/: FindImageMagick.cmake
PA10/assets/: Backboard.mtl  Ball.mtl  Board.mtl  Bumper2.mtl  CylinderGreen.mtl  CylinderPink.mtl  CylinderYellow.mtl  Flipper.mtl  Fractal  Lane.mtl  LaneRight.mtl  LaunchBarrier.mtl  Oak  Plunger.mtl  cylinder.mtl  topScores.txt
PA10/include/: ball.h  board.h  bumper.h  camera.h  cylinder.h  engine.h  flipper.h  flipper_left.h  flipper_right.h  graphics.h  gui.h  lane.h  launch_barrier.h  object.h  physics.h  physics_object.h  plunger.h  shader.h  trigger_object.h  window.h  world.h
PA10/shaders/: lighting.frag  lighting.vert
PA10/src/: ball.cpp  board.cpp  bumper.cpp  camera.cpp  cylinder.cpp  engine.cpp  flipper.cpp  flipper_left.cpp  flipper_right.cpp  graphics.cpp  gui.cpp  lane.cpp  launch_barrier.cpp  main.cpp  object.cpp  physics_object.cpp  plunger.cpp  shader.cpp  trigger_object.cpp  window.cpp  world.cpp
PA11/: CMakeLists.txt  README.md
PA11/assets/: Bb.mtl  Bepis.mtl  Chair.mtl  Gun.mtl  Room.mtl  Shelf.mtl  Sky.mtl  Stool.mtl  Table.mtl  Target.mtl  TargetBlue.mtl  TargetGreen.mtl  TargetPurple.mtl  TargetRed.mtl  bar.mtl  can.blend  can.mtl  cross.blend  cross.blend1  cross.mtl  topScores.txt
PA11/include/: bb.h  bullet.h  camera.h  can.h  cross.h  engine.h  graphics.h  graphics_headers.h  gui.h  gun.h  light.h  model.h  object.h  obstacle.h  physics_object.h  shader.h  shadow.h  sound.h  target.h  texture.h  trigger_object.h  window.h  world.h
PA11/shaders/: lighting.frag  lighting.vert  shader.frag  shader.vert  shadow_depth.frag  shadow_depth.vert
PA11/src/: bb.cpp  bullet.cpp  camera.cpp  can.cpp  cross.cpp  engine.cpp  graphics.cpp  gui.cpp  gun.cpp  light.cpp  model.cpp  object.cpp  obstacle.cpp  physics_object.cpp  shader.cpp  shadow.cpp  sound.cpp  target.cpp  trigger_object.cpp  window.cpp  world.cpp
PA2/: README.md
PA2/include/: graphics.h
PA2/src/: engine.cpp  graphics.cpp  main.cpp  object.cpp
PA3/: README.md
PA3/include/: graphics.h  object.h
PA3/src/: camera.cpp  engine.cpp  graphics.cpp  main.cpp  object.cpp  window.cpp
PA4/: README.md
PA4/include/: engine.h  graphics.h  object.h
PA4/shaders/: shader.vrt
PA5/: CMakeLists.txt  README.md  text
PA6/: CMakeLists.txt  README.md
PA7/: CMakeLists.txt  README.md
PA8/: README.md
PA9/: CMakeLists.txt  README.md
(+130 files in other folders)
