PROJECT(ShootingGallery)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/CMakeModules")
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(SDL2 REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(GLM REQUIRED)
FIND_PACKAGE(assimp REQUIRED)
FIND_PACKAGE(ImageMagick COMPONENTS Magick++ REQUIRED)
FIND_PACKAGE(Bullet REQUIRED)
FIND_PACKAGE(SDL2_MIXER REQUIRED)
SET(CXX11_FLAGS -std=gnu++11)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX11_FLAGS}")
SET(TARGET_LIBRARIES "${OPENGL_LIBRARY} ${SDL2_LIBRARY} ${ASSIMP_LIBRARIES} ${ImageMagick_LIBRARIES}")

# Set Includes
SET(INCLUDES ${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${INCLUDES})

add_definitions     ( ${BULLET_DEFINITIONS} )

IF(UNIX)
  ADD_DEFINITIONS(-DUNIX)
ENDIF(UNIX)

IF(NOT APPLE)
  IF(GLEW_FOUND)
      INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIRS})
      LINK_LIBRARIES(${GLEW_LIBRARIES})
  ENDIF(GLEW_FOUND)
  IF(assimp_FOUND)
  		INCLUDE_DIRECTORIES(${assimp_INCLUDE_DIRS})
      LINK_LIBRARIES(${assimp_LIBRARIES})
  ENDIF(assimp_FOUND)
	IF(ImageMagick_FOUND)
			INCLUDE_DIRECTORIES(${ImageMagick_INCLUDE_DIRS})
			LINK_LIBRARIES(${ImageMagick_LIBRARIES})
	ENDIF(ImageMagick_FOUND)
  IF(SDL2_MIXER_FOUND)
      INCLUDE_DIRECTORIES(${SDL2_MIXER_INCLUDE_DIRS})
      LINK_LIBRARIES(${SDL2_MIXER_LIBRARIES})
  ENDIF(SDL2_MIXER_FOUND)
ENDIF(NOT APPLE)

INCLUDE_DIRECTORIES(
  "${PROJECT_SOURCE_DIR}/include"
  ${SDL2_INCLUDE_DIR}
  ${GLM_INCLUDE_DIRS}
  ${assimp_INCLUDE_DIRS}
	${ImageMagick_INDLUDE_DIRS}
   ${SDL2_MIXER_INDLUDE_DIRS}

)

include_directories ( ${BULLET_INCLUDE_DIRS} )

link_directories    ( ${BULLET_LIBRARY_DIRS} )

# Set sources
FILE(GLOB_RECURSE SOURCES "src/*.cpp")
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} src/sound.cpp include/sound.h)


add_custom_target("${PROJECT_NAME}_SUCCESSFUL" ALL
                  DEPENDS ${PROJECT_NAME}
                  COMMAND ${CMAKE_COMMAND} -E echo ""
                  COMMAND ${CMAKE_COMMAND} -E echo "====================="
                  COMMAND ${CMAKE_COMMAND} -E echo "  Compile complete!"
                  COMMAND ${CMAKE_COMMAND} -E echo "====================="
                  COMMAND ${CMAKE_COMMAND} -E echo "${CMAKE_CURRENT_BINARY_DIR}"
                 )

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OPENGL_LIBRARY} ${SDL2_LIBRARY} ${SDL2_MIXER_LIBRARY} ${ASSIMP_LIBRARY} ${ImageMagick_LIBRARIES} ${BULLET_LIBRARIES})
